# gstreamer_examples

./: .gitignore  LICENSE  play_audio_mix_wav.sh  play_audio_ogg.sh  stereo_video_mix.sh  webcam_audio_video_save.sh
android/: build.gradle  (+3 more)
remote/: CMakeLists.txt  tcp_streaming_h264_receiver.sh  tcp_streaming_h264_sender.sh  tcp_streaming_jpeg_receiver.py  tcp_streaming_jpeg_receiver.sh  tcp_streaming_jpeg_sender.sh  tcp_streaming_nvh264_receiver.sh  tcp_streaming_nvh264_sender.sh  tcp_streaming_simple_receiver.sh  tcp_streaming_simple_sender.sh  tcp_streaming_stereo_jpeg_receiver.sh  tcp_streaming_stereo_jpeg_sender.sh  udp_streaming_audio_receiver.sh  udp_streaming_audio_sender.sh  udp_streaming_audio_video_receiver.sh  udp_streaming_audio_video_sender.sh  udp_streaming_jpeg_receiver.sh  udp_streaming_jpeg_sender.sh  udp_streaming_mixed_jpeg_audio_receiver.bash  udp_streaming_mixed_jpeg_audio_receiver.py  udp_streaming_mixed_jpeg_audio_sender.bash  udp_streaming_mixed_jpeg_audio_sender.py  udp_streaming_mux_receiver.c  udp_streaming_mux_receiver.sh  udp_streaming_mux_sender.sh  udp_streaming_packed_stereo_jpeg_receiver.sh  udp_streaming_packed_stereo_jpeg_sender.sh  udp_streaming_receiver.sh  udp_streaming_sender.sh  udp_streaming_simple_receiver.sh  udp_streaming_simple_sender.sh  udp_streaming_stereo_jpeg_receiver.sh  udp_streaming_stereo_jpeg_sender.sh  udp_streaming_tsmux_receiver.sh  udp_streaming_tsmux_sender.sh
remote/advanced/: udp_streaming_mux_audio_video_receiver.sh  udp_streaming_mux_audio_video_sender.sh  udp_streaming_mux_receiver_audio_video.sh  (+1 more)
(+48 files in other folders)
